--- a/.gitignore
+++ b/.gitignore
@@ -128,6 +128,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
+# Claude configuration files (may contain sensitive data)
+.claude.json
+.claude/
+
 # TASKER specific ignores
 # ======================
 
