fix: Increase default timeout from 30 to 300 seconds
Changed default timeout to 5 minutes (300s) to prevent unwanted
timeouts on normal operations. 30 seconds was too aggressive and
causing premature task termination.

Changes:
- Default timeout changed from 30 to 300 seconds in:
  - CLI argument default (tasker.py)
  - TaskExecutor constructor (task_executor_main.py)
  - TaskRunner constructor (task_runner.py)
- Fixed fallback timeout values to use self.timeout
- Updated help text to show new default
- Added code_review/ to .gitignore
- Version bump to 2.1.4

Impact:
- Tasks now have 5 minutes by default instead of 30 seconds
- Prevents unwanted timeouts on slower operations
- Timeout feature still prevents never-ending processes
- Alert script timeout remains at 30s (alerts should be quick)
- Can still be overridden via CLI, environment, or task config

Fixes production issue where legitimate tasks were timing out
at 30 seconds, disrupting workflows.

--- a/.gitignore
+++ b/.gitignore
@@ -184,3 +184,6 @@ Thumbs.db
 # Test case artifacts (keep the .txt files but ignore generated outputs)
 test_cases/*_*_*.log
 test_cases/*_*_*.dryrun
+
+# Code review artifacts
+code_review/
