--- a/cfg/execution_types.yaml
+++ b/cfg/execution_types.yaml
@@ -32,6 +32,11 @@ platforms:
     # Can be overridden at exec-type level or task level
     default_timeout: 300
 
+    # Platform-level default validation timeout for host connectivity tests (in seconds)
+    # Used when validating hosts with pbtest, p7s_test, wwrs_test, etc.
+    # Can be overridden at exec-type level via validation_test.timeout
+    default_validation_timeout: 10
+
     shell:
       description: "Local shell execution with Bash"
       binary: /bin/bash
@@ -59,6 +64,7 @@ platforms:
         command: pbtest
         expected_exit: 0
         expected_output: "OK"
+        timeout: 10  # Optional: validation timeout in seconds (default: 10)
 
     p7s:
       description: "P7S remote execution"
@@ -85,6 +91,7 @@ platforms:
         command: wwrs_test
         expected_exit: 0
         expected_output: "OK"
+        timeout: 15  # Optional: allow more time for wwrs validation (default: 10)
 
   # Windows execution type definitions (future support)
   windows:
@@ -93,6 +100,9 @@ platforms:
 
     # Platform-level default timeout for all Windows exec types (in seconds)
     default_timeout: 300
+
+    # Platform-level default validation timeout for host connectivity tests (in seconds)
+    default_validation_timeout: 10
 
     shell:
       description: "Local shell execution with cmd.exe"
